# qgcontrol

./: README.md
data/: input  location  output
fly_mission_norl/: fly_mission.cpp
fly_mission_np/: fly_mission.cpp
get_location/: takeoff_and_land.cpp
stop_at_current_position/: CMakeLists.txt  stop_now.cpp
takeoff_land/: takeoff_and_land.cpp
